# span

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
examples/: CMakeLists.txt  span_basic_usage.cpp  span_bytes.cpp  span_subviews.cpp  todo.cpp
include/beman/span/: CMakeLists.txt  span.hpp
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/span/: CMakeLists.txt  span.test.cpp
